--- a/quick-sample/payment-quick-sample-api/pom.xml
+++ b/quick-sample/payment-quick-sample-api/pom.xml
@@ -4,12 +4,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>quick-sample</artifactId>
-        <groupId>org.kevin</groupId>
+        <groupId>com.kevin</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>jar</packaging>
     <artifactId>payment-quick-sample-api</artifactId>
 
 
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+    </dependencies>
 </project>
