--- a/quick-sample/pom.xml
+++ b/quick-sample/pom.xml
@@ -4,12 +4,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>springcloud-alibaba-samples</artifactId>
-        <groupId>org.kevin</groupId>
+        <groupId>com.kevin</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>quick-sample</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>payment-quick-sample-api</module>
+        <module>payment-quick-sample</module>
+    </modules>
+
+
+
+
 
 
 </project>
