--- a/springcloud-alibaba-samples-bom/pom.xml
+++ b/springcloud-alibaba-samples-bom/pom.xml
@@ -6,15 +6,14 @@
 
     <groupId>com.kevin</groupId>
     <artifactId>springcloud-alibaba-samples-bom</artifactId>
-    <version>${revision}</version>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
     <properties>
-        <revision>0.0.1-SNAPSHOT</revision>
         <junit.version>4.12</junit.version>
         <log4j.version>1.2.17</log4j.version>
         <lombok.version>1.16.18</lombok.version>
-        <mysql.version>5.1.48</mysql.version>
-        <druid.version>1.1.16</druid.version>
+        <mysql.version>8.0.19</mysql.version>
+        <druid.version>1.1.21</druid.version>
         <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
     </properties>
 
@@ -29,11 +28,6 @@
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>druid</artifactId>
-                <version>${druid.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
@@ -51,6 +45,12 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>${druid.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
