#add:添加公用代码

--- a/quick-sample/payment-quick-sample-api/pom.xml
+++ b/quick-sample/payment-quick-sample-api/pom.xml
@@ -19,6 +19,18 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis-spring</artifactId>
+            <version>2.0.3</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.kevin</groupId>
+            <artifactId>quick-common-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 </project>
