--- a/quick-sample/payment-quick-sample/pom.xml
+++ b/quick-sample/payment-quick-sample/pom.xml
@@ -72,6 +72,12 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.kevin</groupId>
+            <artifactId>quick-common-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
