--- a/quick-sample/payment-quick-sample/src/main/resources/application-dev.yml
+++ b/quick-sample/payment-quick-sample/src/main/resources/application-dev.yml
@@ -4,9 +4,8 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/payment_build_sample?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/payment_sample?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
-    password: root
+    password: root2020
 mybatis:
-  mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.kevin.payment.quick.sample.domain
+  mapper-locations: classpath:mybatis/mapper/*/*.xml
