--- a/quick-sample/quick-common-core/pom.xml
+++ b/quick-sample/quick-common-core/pom.xml
@@ -3,19 +3,18 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>springcloud-alibaba-samples</artifactId>
+        <artifactId>quick-sample</artifactId>
         <groupId>com.kevin</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>quick-sample</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>payment-quick-sample-api</module>
-        <module>payment-quick-sample</module>
-        <module>quick-common-core</module>
-    </modules>
+    <artifactId>quick-common-core</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+    </dependencies>
 </project>
