--- a/springcloud-alibaba-samples-bom/pom.xml
+++ b/springcloud-alibaba-samples-bom/pom.xml
@@ -15,10 +15,16 @@
         <mysql.version>8.0.19</mysql.version>
         <druid.version>1.1.21</druid.version>
         <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
+        <mybatis-plus.version>3.3.1</mybatis-plus.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
