--- a/nacos-samples/nacos-order-sample/pom.xml
+++ b/nacos-samples/nacos-order-sample/pom.xml
@@ -3,23 +3,13 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>quick-sample</artifactId>
+    <artifactId>nacos-samples</artifactId>
     <groupId>com.kevin</groupId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>quick-common-core</artifactId>
-  <packaging>jar</packaging>
 
-  <dependencies></dependencies>
+  <artifactId>nacos-order-sample</artifactId>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </build>
 
 </project>
