--- a/nacos-samples/pom.xml
+++ b/nacos-samples/pom.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>quick-sample</artifactId>
+    <artifactId>springcloud-alibaba-samples</artifactId>
     <groupId>com.kevin</groupId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>quick-common-core</artifactId>
-  <packaging>jar</packaging>
+  <artifactId>nacos-samples</artifactId>
+  <packaging>pom</packaging>
+  <name>nacos-samples</name>
+  <modules>
+    <module>nacos-order-sample</module>
+    <module>nacos-product-sample</module>
+  </modules>
 
-  <dependencies></dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </build>
 
 </project>
