--- a/quick-sample/order-quick-sample/pom.xml
+++ b/quick-sample/order-quick-sample/pom.xml
@@ -10,7 +10,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>order-quick-sample</artifactId>
   <packaging>jar</packaging>
-  <name>quickstart</name>
+  <name>order-quick-sample</name>
 
   <dependencies>
     <dependency>
@@ -34,10 +34,25 @@
       <artifactId>spring-boot-starter-undertow</artifactId>
     </dependency>
 
-
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-devtools</artifactId>
+      <optional>true</optional>
+    </dependency>
+
+    <dependency>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
     </dependency>
 
     <dependency>
