--- a/quick-sample/order-quick-sample/src/main/resources/application-dev.yml
+++ b/quick-sample/order-quick-sample/src/main/resources/application-dev.yml
@@ -1,11 +1,11 @@
 spring:
-  application:
-    name: order-quick-sample
-  mandatory-file-encoding: utf-8
-  http:
-    encoding:
-      charset: UTF-8
-      enabled: true
+#  application:
+#    name: order-quick-sample
+#  mandatory-file-encoding: utf-8
+#  http:
+#    encoding:
+#      charset: UTF-8
+#      enabled: true
   datasource:
     druid:
       username: root
@@ -27,6 +27,10 @@ spring:
       maxPoolPreparedStatementPerConnectionSize: 20
       useGlobalDataSourceStat: true
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
 
 logging:
   level:
@@ -38,18 +42,18 @@ logging:
   pattern:
     dateformat: yyyy-MM-dd HH:mm:ss.SSS
 
-server:
-  port: 9092
-  undertow:
-    accesslog:
-      enabled: true
-      dir: undertow-access-logs
-      pattern: common
-      rotate: true
-      prefix: discovery-client-access-log.
-      suffix: log
-  servlet:
-    context-path: /order-quick
+#server:
+#  port: 9092
+#  undertow:
+#    accesslog:
+#      enabled: true
+#      dir: undertow-access-logs
+#      pattern: common
+#      rotate: true
+#      prefix: discovery-client-access-log.
+#      suffix: log
+#  servlet:
+#    context-path: /order-quick
 management:
   endpoints:
     web:
