--- a/quick-sample/product-quick-sample/pom.xml
+++ b/quick-sample/product-quick-sample/pom.xml
@@ -43,6 +43,22 @@
     </dependency>
 
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-devtools</artifactId>
+      <optional>true</optional>
+    </dependency>
+
+    <dependency>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>com.alibaba.cloud</groupId>
+      <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>com.kevin</groupId>
       <artifactId>quick-common-dao</artifactId>
       <version>0.0.1-SNAPSHOT</version>
