--- a/quick-sample/order-quick-sample/pom.xml
+++ b/quick-sample/order-quick-sample/pom.xml
@@ -56,6 +56,22 @@
     </dependency>
 
     <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.github.openfeign</groupId>
+      <artifactId>feign-okhttp</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+    </dependency>
+
+
+    <dependency>
       <groupId>com.kevin</groupId>
       <artifactId>quick-common-dao</artifactId>
       <version>0.0.1-SNAPSHOT</version>
