--- a/quick-sample/order-quick-sample/src/main/resources/application-dev.yml
+++ b/quick-sample/order-quick-sample/src/main/resources/application-dev.yml
@@ -11,7 +11,7 @@ spring:
       username: root
       password: root
       jdbc-Url: jdbc:mysql://localhost:3306/ms_alibaba?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8&useSSL=false
-      driverClassName: com.mysql.jdbc.Driver
+      driverClassName: com.mysql.cj.jdbc.Driver
       initialSize: 5
       minIdle: 5
       maxActive: 20
@@ -27,10 +27,10 @@ spring:
       maxPoolPreparedStatementPerConnectionSize: 20
       useGlobalDataSourceStat: true
       connectionProperties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
-  cloud:
-    nacos:
-      discovery:
-        server-addr: 127.0.0.1:8848
+#  cloud:
+#    nacos:
+#      discovery:
+#        server-addr: 127.0.0.1:8848
 
 logging:
   level:
@@ -62,3 +62,11 @@ management:
   endpoint:
     shutdown:
       enabled: true
+
+feign:
+  httpclient:
+    enabled: false
+  okhttp:
+    enabled: true
+  hystrix:
+    enabled: true
